// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should have the right class names 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_base"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant brand 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_brand"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant destructive 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_destructive"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant inverse 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_inverse"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant neutral and have a custom class 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_neutral my-custom-class-name"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant outline-brand 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_outline-brand"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;

exports[`<Button/> should have the right class names when variant success 1`] = `
<button
  aria-haspopup={false}
  className="slds-align_absolute-center slds-button slds-button_success"
  data-id="button-element"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  style={Object {}}
  type="button"
>
  Button Label
</button>
`;
